--- a/app/frontend/assets/styles/components/_filters.scss
+++ b/app/frontend/assets/styles/components/_filters.scss
@@ -1,16 +1,27 @@
-.container__filter {
+.container__tools {
     margin-top: $alert-padding-y;
     display: flex;
 
-    >label {
-        line-height: 3.2;
-        margin-right: $alert-padding-x;
+    .container__filter {
+        flex: 1;
+        display: flex;
+
+        >label {
+            line-height: 3.2;
+            margin-right: $alert-padding-x;
+        }
+
+        >div {
+            flex: 0 1 20%;
+            min-width: 250px;
+        }
     }
 
     > .btn {
         padding: 0 16px 0 10px;
         flex: 0;
     }
+
 }
 
 .filter-header {
@@ -51,6 +62,7 @@
         top: 100%;
         left: 0;
         height: 0;
+        min-width: 220px;
         overflow: hidden;
         background-color: #fff;
     }
