--- a/app/apps/regie/templates/melding/part_overview_table.html
+++ b/app/apps/regie/templates/melding/part_overview_table.html
@@ -34,6 +34,15 @@
                             {{ form.limit|render_rotterdam_formulier }}
                         </div>
                     </div>
+                    <div class="container__multiselect">
+                        <label class="visually-hidden">Categorie</label>
+                        <button class="toggle js-toggle" type="button">Selecteer categorie ({{onderwerpen_geselecteerd}}/{{filter_options.onderwerp|length}})</button>
+                        <div class="wrapper">
+                            {{ form.onderwerp|render_rotterdam_formulier }}
+                            {{ form.ordering|render_rotterdam_formulier }}
+                            {{ form.limit|render_rotterdam_formulier }}
+                        </div>
+                    </div>
                 </div>
                 <a href="{{ melding_aanmaken_url }}" class="btn btn-action">
                     <svg width="24" height="24" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
