--- a/app/apps/regie/templates/base.html
+++ b/app/apps/regie/templates/base.html
@@ -49,6 +49,6 @@
             </div>
         </main>
         <div class="spinner"></div>
+        {% include "auth/session_timer.html" %}
     </body>
-    {% include "auth/check_sso_status.html" %}
 </html>
