--- a/app/frontend/assets/styles/components/_imageSlider.scss
+++ b/app/frontend/assets/styles/components/_imageSlider.scss
@@ -17,10 +17,6 @@
         scroll-snap-align: center;
         display: flex;
 
-        &:focus {
-            border: 3px solid gold;
-        }
-
         .image {
             width: 100%;
             height: 0;
@@ -66,6 +62,11 @@
                     opacity: 1;
                     outline: 2px solid $primary;
                 }
+            }
+
+            button {
+                border: 0;
+                cursor: pointer;
             }
         }
     }
