--- a/app/apps/regie/templates/melding/part_detail.html
+++ b/app/apps/regie/templates/melding/part_detail.html
@@ -144,7 +144,7 @@
                             </svg>
                                 Melding
                             </h2>
-                            <div class="display--flex">
+                            <div class="display--flex--md">
                                 <ul class="list-clean">
                                     <li>
                                         <h3 class="h5">Nummer</h3>
@@ -208,7 +208,7 @@
                                 </svg>
                                 Locatie
                             </h2>
-                            <div class="display--flex">
+                            <div class="display--flex--md">
                                 <ul class="list-clean">
                                     <li>
                                         <h3 class="h5">Begraafplaats</h2>
@@ -265,7 +265,7 @@
                                 </svg>
                                 Melder
                             </h2>
-                            <div class="display--flex">
+                            <div class="display--flex--md">
                                 <ul class="list-clean incident-meta-list">
                                     {% if melding.meta.naam_melder %}
                                     <li>
