--- a/app/frontend/assets/styles/_base.scss
+++ b/app/frontend/assets/styles/_base.scss
@@ -373,6 +373,13 @@ section {
 .display--flex {
     display: flex;
 }
+
+.display--flex--md {
+    @media (min-width: map-get($grid-breakpoints, md)) {
+        display: flex;
+    }
+}
+
 .display--flex--center {
     display: flex;
     align-items: center;
