Added option has-no-address

--- a/app/apps/regie/templates/melding/part_overview_table.html
+++ b/app/apps/regie/templates/melding/part_overview_table.html
@@ -9,13 +9,13 @@
 <div data-controller="overview">
 
     <turbo-frame id="overvieww" data-turbo-action="advance" >
-        <form method="get" action="{% url 'overview' %}" id="filterForm">
+        <form method="get" action="{% url 'overview' %}" id="filterForm" data-controller="filter">
             <div class="filter-header">
                 <h1 class="page-title">Meldingen</h1>
                 <span class="help-text">{{ startNum }} - {{ endNum }} van {{ totaal }} resultaten</span>
             </div>
             <div class="container__tools">
-                <div class="container__filter" data-controller="filter" data-filter-target="filterOverview">
+                <div class="container__filter" data-filter-target="filterOverview">
                     <div class="container__multiselect">
                         <label class="visually-hidden">Locatie</label>
                         <button class="toggle js-toggle" type="button">Selecteer locatie ({{locaties_geselecteerd}}/{{filter_options.begraafplaats|length}})</button>
@@ -48,15 +48,35 @@
                 </a>
             </div>
 
+            <div class="form-check form-switch">
+                <label class="form-switch-label" for="no-address">
+                    <span>Toon alleen Begraven en Cremeren</span>
+                    <input
+                        class="form-switch-input"
+                        type="checkbox"
+                        value=""
+                        name="no-address"
+                        id="no-address"
+                        data-action="click->filter#onShowNoAddress"
+                    >
+                    <div class="container__slider">
+                        <span class="slider"></span>
+                    </div>
+                </label>
+            </div>
+
             <div class="container__table">
                 <table class="table--overview">
                     <thead>
                         <tr>
                             <th></th>
                             <th class="sorting {{ GET|heeft_orden_oplopend:'id' }}"><a href="{% url 'overview' %}?{{ GET|qs_ordenen:'id' }}" role="button">Melding</a></th>
-                            <th class="">Locatie</th>
-                            <th class="sorting {{ GET|heeft_orden_oplopend:'locaties__grafnummer' }}"><a href="{% url 'overview' %}?{{ GET|qs_ordenen:'locaties__grafnummer' }}" role="button">Grafnummer</a></th>
-                            <th class="sorting {{ GET|heeft_orden_oplopend:'locaties__vak' }}"><a href="{% url 'overview' %}?{{ GET|qs_ordenen:'locaties__vak' }}" role="button">Vak</a></th>
+                            <th class="js-has-no-address">Locatie</th>
+                            <th class="js-has-no-address sorting {{ GET|heeft_orden_oplopend:'locaties__grafnummer' }}"><a href="{% url 'overview' %}?{{ GET|qs_ordenen:'locaties__grafnummer' }}" role="button">Grafnummer</a></th>
+                            <th class="js-has-no-address sorting {{ GET|heeft_orden_oplopend:'locaties__vak' }}"><a href="{% url 'overview' %}?{{ GET|qs_ordenen:'locaties__vak' }}" role="button">Vak</a></th>
+                            <th class="js-has-address">Adres</th>
+                            <th class="js-has-address">Wijk</th>
+                            <th class="js-has-address">Buurt</th>
                             <th>Categorie</th>
                             <th class="sorting {{ GET|heeft_orden_oplopend:'origineel_aangemaakt' }}"><a href="{% url 'overview' %}?{{ GET|qs_ordenen:'origineel_aangemaakt' }}" role="button">Datum</a></th>
                             {% comment %} <th class="sorting {{ GET|heeft_orden_oplopend:'afgesloten_op' }}"><a href="{% url 'overview' %}?{{ GET|qs_ordenen:'afgesloten_op' }}" role="button">Status</a></th> {% endcomment %}
@@ -79,9 +99,12 @@
                             </td>
                             <td>{{melding.id}}</td>
 
-                            <td>{% vind_in_dict filter_options.begraafplaats melding.locaties_voor_melding.0.begraafplaats %}</td>
-                            <td>{% if melding.locaties_voor_melding.0.grafnummer %}{{ melding.locaties_voor_melding.0.grafnummer }} {% else %}n.v.t.{% endif %}</td>
-                            <td>{% if melding.locaties_voor_melding.0.vak %}{{melding.locaties_voor_melding.0.vak}} {% else %}n.v.t.{% endif %}</td>
+                            <td class="js-no-address">{% vind_in_dict filter_options.begraafplaats melding.locaties_voor_melding.0.begraafplaats %}</td>
+                            <td class="js-no-address">{% if melding.locaties_voor_melding.0.grafnummer %}{{ melding.locaties_voor_melding.0.grafnummer }} {% else %}n.v.t.{% endif %}</td>
+                            <td class="js-no-address">{% if melding.locaties_voor_melding.0.vak %}{{melding.locaties_voor_melding.0.vak}} {% else %}n.v.t.{% endif %}</td>
+                            <td class="js-has-address">{% if melding.locaties_voor_melding.0.adres.straatNaam %}{{melding.locaties_voor_melding.0.adres.straatNaam}} {{melding.locaties_voor_melding.0.adres.huisnummer}}{% else %}n.v.t.{% endif %}</td>
+                            <td class="js-has-address">{% if melding.locaties_voor_melding.0.wijk %}{{melding.locaties_voor_melding.0.wijk}}{% else %}n.v.t.{% endif %}</td>
+                            <td class="js-has-address">{% if melding.locaties_voor_melding.0.buurt %}{{melding.locaties_voor_melding.0.buurt}}{% else %}n.v.t.{% endif %}</td>
                             <td>
                                 {% for onderwerp in melding.onderwerpen %}
                                     {% vind_in_dict filter_options.onderwerp onderwerp %}{% if not forloop.last %}, {% endif %}
