--- a/app/frontend/assets/styles/components/_forms.scss
+++ b/app/frontend/assets/styles/components/_forms.scss
@@ -333,7 +333,8 @@ textarea {
         transition: .4s;
     }
 
-    input:checked + .container__slider .slider {
+    input:checked + .container__slider .slider,
+    input.show-no-address + .container__slider .slider {
         background-color: $green-tint01;
     }
 
@@ -341,7 +342,8 @@ textarea {
         box-shadow: 0 0 1px $green-tint01;
     }
 
-    input:checked + .container__slider .slider:before {
+    input:checked + .container__slider .slider:before,
+    input.show-no-address + .container__slider .slider:before {
         -webkit-transform: translateX(20px);
         -ms-transform: translateX(20px);
         transform: translateX(20px);
