--- a/app/apps/regie/templates/melding/aanmaken.html
+++ b/app/apps/regie/templates/melding/aanmaken.html
@@ -36,7 +36,7 @@
         {% include "snippets/legend.html" with title="Verzoek" icon_name="list" only %}
         {{ form.onderwerp|render_rotterdam_formulier }}
         {{ form.toelichting|render_rotterdam_formulier }}
-        {{ form.fotos|render_rotterdam_formulier }}
+        {{ form.bijlagen|render_rotterdam_formulier }}
     </fieldset>
     <fieldset>
         {% include "snippets/legend.html" with title="Melder" icon_name="person" only %}
